# haskell-transaction

./: .gitignore  LICENSE  hs-finance.cabal  stack.yaml
app/: Core.hs  GUI.hs  Main.hs  Server.hs  Utils.hs
res/: layout.glade
src/: CSV.hs  Experiments.hs  Main  Main.hs  Plot.hs  Scheme.hs  Transaction.hs  Utils.hs
src/Transaction/: CSV.hs  Database.hs  IO.hs  Plot.hs  Scheme.hs  Types.hs
txt/: roadmap.org
