name:                hs-finance
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/hs-finance#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Bart Frenk
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  exposed-modules:     Transaction
                     , Utils
                     , Transaction.CSV
                     , Transaction.Types
                     , Transaction.Plot
                     , Transaction.Scheme
                     , Transaction.IO
  build-depends:       base >= 4.7 && < 5
                     , Chart
                     , strict
                     , containers
                     , time
                     , old-locale
                     , Decimal
                     , HDBC
                     , HDBC-sqlite3
                     , filepath
                     , parsec
                     , MissingH
  default-language:    Haskell2010

executable console
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , hs-finance
                     , containers
                     , Chart
                     , Chart-cairo
  default-language:    Haskell2010

executable gui
  hs-source-dirs:      app
  main-is:             GUI.hs
  other-modules:       Core
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , hs-finance
                     , containers
                     , gtk3
                     , mtl
                     , Chart
                     , Chart-cairo
                     , stm
  default-language:    Haskell2010

test-suite hs-finance-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hs-finance
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hs-finance
